--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .change {cursor: pointer;}
     .change:hover{color: blue;}
     .payment {width:100%; font-weight: bold; color:white; background-color: blue; border-radius: 8px; text-align:center;}
-    .payment:hover {color: rgb(94, 94, 231)}
+    .payment:hover {background-color: rgb(100, 100, 188);}
     .annual-row {display: flex; flex-direction: row; justify-content: space-evenly; align-items: center;  width: 100%; background-color: #F5F7FF; border-radius: 12px; }
     .price-column {display: flex; flex-direction: column;}
     .music-picture {height: 40px;}
